Extra API: /api/users/me
