# api/swagger/swagger.yaml
@@ -168,6 +168,17 @@ consumes:
 produces:
   - application/json
 paths:
+  /users/me:
+    get:
+      description: Haal gegevens op over jezelf
+      security:
+        - api: []
+      responses:
+        200:
+          description: Gegevens over jezelf
+          schema:
+            $ref: "#/definitions/User"
+
   /games:
     x-swagger-router-controller: games
     get:
@@ -475,6 +486,15 @@ definitions:
         minimum: 0
         maximum: 9
         type: integer
+        
+  User:
+    type: object
+    description: Gegevens van een user
+    properties:
+      id:
+        type: string
+      name:
+        type: string
 
   Piece:
     type: string
